--- a/automations.yaml
+++ b/automations.yaml
@@ -748,7 +748,7 @@
   - action: switch.turn_off
     data: {}
     target:
-      entity_id: switch.hal_use_wake_word
+      entity_id: switch.voicekit_bureau_microphone
   - wait_for_trigger:
     - platform: state
       entity_id:
@@ -767,7 +767,7 @@
   - action: switch.turn_on
     data: {}
     target:
-      entity_id: switch.hal_use_wake_word
+      entity_id: switch.voicekit_bureau_microphone
   mode: queued
   max: 10
 - id: '1688368387161'
@@ -826,7 +826,7 @@
     action: light.turn_on
   - data: {}
     target:
-      entity_id: switch.hal_use_wake_word
+      entity_id: switch.voicekit_bureau_microphone
     action: switch.turn_off
   - wait_for_trigger:
     - platform: state
@@ -845,7 +845,7 @@
     action: scene.turn_on
   - data: {}
     target:
-      entity_id: switch.hal_use_wake_word
+      entity_id: switch.voicekit_bureau_microphone
     action: switch.turn_on
   mode: single
 - id: '1688371620889'
@@ -2554,7 +2554,8 @@
     metadata: {}
     data: {}
     target:
-      entity_id: switch.hal_use_wake_word
+      entity_id:
+      - switch.voicekit_bureau_microphone
   mode: single
 - id: '1718020351848'
   alias: Éteindre Chambre si plus de présence
@@ -2662,8 +2663,8 @@
     to: 'on'
   condition:
   - condition: state
-    entity_id: binary_sensor.home_occupied
-    state: 'on'
+    entity_id: input_select.mode_de_presence_de_la_maison
+    state: Occupée
   - condition: state
     entity_id: input_boolean.automation_monitor_home
     state: 'on'
@@ -2685,8 +2686,8 @@
     to: 'on'
   condition:
   - condition: state
-    entity_id: binary_sensor.home_occupied
-    state: 'on'
+    entity_id: input_select.mode_de_presence_de_la_maison
+    state: Occupée
   - condition: state
     entity_id: input_boolean.automation_monitor_home
     state: 'on'
@@ -2708,8 +2709,8 @@
     to: 'on'
   condition:
   - condition: state
-    entity_id: binary_sensor.home_occupied
-    state: 'on'
+    entity_id: input_select.mode_de_presence_de_la_maison
+    state: Occupée
   - condition: state
     entity_id: input_boolean.automation_monitor_home
     state: 'on'
@@ -2719,7 +2720,7 @@
     data: {}
     target:
       entity_id:
-      - switch.hal_use_wake_word
+      - switch.voicekit_bureau_microphone
   mode: single
 - id: '1718706928319'
   alias: Transfert Musique Tesla vers Maison - Allumer Enceintes
@@ -2899,7 +2900,7 @@
   use_blueprint:
     path: perso/reduce_volume_of_media_player_when_voice_assistant_listening.yaml
     input:
-      assist_in_progress_binary_sensor: binary_sensor.hal_assist_en_cours
+      assist_in_progress_binary_sensor: binary_sensor.voicekit_bureau_assist_en_cours
       media_player: media_player.sonos_bureau_music_assistant
       threshold_volume: 0.2
       listening_volume: 0.1
@@ -3812,6 +3813,9 @@
     at: input_datetime.pulse_end_schedule
   - platform: homeassistant
     event: start
+  - platform: state
+    entity_id:
+    - input_select.mode_de_presence_de_la_maison
   condition: []
   action:
   - if:
@@ -3824,16 +3828,102 @@
     - condition: state
       entity_id: input_boolean.automation_matrix_2d
       state: 'on'
+    - condition: state
+      entity_id: input_select.mode_de_presence_de_la_maison
+      state: Occupée
     then:
     - action: light.turn_on
       metadata: {}
       data: {}
       target:
         entity_id: light.2d_matrix
+    - action: select.random
+      target:
+        entity_id:
+        - select.2d_matrix_preset
+      data: {}
     else:
     - action: light.turn_off
       metadata: {}
       data: {}
       target:
         entity_id: light.2d_matrix
+  mode: single
+- id: '1727025004524'
+  alias: "Mode Invité - \U0001F514 Notifier mode invité lors de l'arrivée"
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.home_occupied
+    to: 'on'
+  condition:
+  - condition: state
+    entity_id: input_boolean.guest_mode
+    state: 'on'
+  action:
+  - event: NOTIFIER
+    event_data:
+      action: send_to_present
+      title: ✨ Monde Invité
+      message: Bienvenue à la maison, désactiver le mode invité?
+      tag: guest_mode_on_on_arrival
+      callback:
+      - title: Désactiver le mode invité
+        event: deactivate_guest_mode
+        icon: checkmark.circle
+      until:
+      - entity_id: input_boolean.guest_mode
+        new_state: 'off'
+  mode: single
+- id: '1727025092626'
+  alias: "Mode Invité - \U0001F4F2 Désactiver mode invité depuis notification"
+  description: ''
+  trigger:
+  - platform: event
+    event_type: mobile_app_notification_action
+    event_data:
+      action: deactivate_guest_mode
+  condition: []
+  action:
+  - action: input_boolean.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.guest_mode
+  mode: single
+- id: '1727267613496'
+  alias: Changer le mode de présence de la maison
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.home_occupied
+  - platform: homeassistant
+    event: start
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: binary_sensor.home_occupied
+        state: 'on'
+      sequence:
+      - action: input_select.select_option
+        metadata: {}
+        data:
+          option: Occupée
+        target:
+          entity_id: input_select.mode_de_presence_de_la_maison
+    - conditions:
+      - condition: state
+        entity_id: binary_sensor.home_occupied
+        state: 'off'
+      sequence:
+      - action: input_select.select_option
+        metadata: {}
+        data:
+          option: Vide
+        target:
+          entity_id: input_select.mode_de_presence_de_la_maison
   mode: single
