--- a/automations.yaml
+++ b/automations.yaml
@@ -240,16 +240,12 @@
       - condition: trigger
         id: 'on'
       sequence:
-      - action: switch.turn_on
-        data: {}
+      - action: input_select.select_option
+        metadata: {}
+        data:
+          option: Occupée
         target:
-          entity_id:
-          - switch.alexa
-          - switch.voicekit_salon_microphone
-      - action: cover.open_cover
-        data: {}
-        target:
-          entity_id: cover.living_room_cover
+          entity_id: input_select.mode_de_presence_de_la_maison
       - action: script.welcome_home
         data: {}
     - conditions:
@@ -257,9 +253,12 @@
         id:
         - 'off'
       sequence:
-      - action: script.leave_home
+      - action: input_select.select_option
+        metadata: {}
         data:
-          calling_location: home
+          option: Vide
+        target:
+          entity_id: input_select.mode_de_presence_de_la_maison
   mode: parallel
   max: 10
 - id: '1688117431729'
@@ -2312,17 +2311,12 @@
     - À plus
   condition: []
   action:
-  - action: script.leave_home
+  - action: input_select.select_option
     metadata: {}
     data:
-      calling_location: home
-    enabled: true
-  - action: automation.trigger
-    metadata: {}
-    data:
-      skip_condition: true
+      option: Vide
     target:
-      entity_id: automation.take_out_trash_on_arrival
+      entity_id: input_select.mode_de_presence_de_la_maison
   - set_conversation_response: '{% set time = now().hour %}
 
       {% if (time >= 18) %}
