--- a/scripts.yaml
+++ b/scripts.yaml
@@ -348,12 +348,23 @@ wake_up:
 start_marilou_bedtime_routine:
   alias: Démarrer la routine du sommeil de Marilou
   sequence:
+  - action: light.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: light.couloir_applique_escalier
   - action: scene.turn_on
     metadata: {}
     target:
       entity_id: scene.chambre_bebe_initial
   - action: media_player.turn_on
     data: {}
+    target:
+      entity_id:
+      - media_player.sonos_chambre_marilou_music_assistant
+  - action: media_player.volume_set
+    data:
+      volume_level: 0.1
     target:
       entity_id:
       - media_player.sonos_chambre_marilou_music_assistant
@@ -366,12 +377,6 @@ start_marilou_bedtime_routine:
       enqueue: replace
       radio_mode: true
       media_type: playlist
-  - action: media_player.volume_set
-    data:
-      volume_level: 0.1
-    target:
-      entity_id:
-      - media_player.sonos_chambre_marilou_music_assistant
   - action: media_player.shuffle_set
     data:
       shuffle: true
